HOF 개념을 이용해 HOC를 배워보자

--- a/public/hof.html
+++ b/public/hof.html
@@ -40,6 +40,9 @@ withCalculator(sub)(1,2,'SUB')
 withCalculator(multi)(1,2,'MULTI')
 withCalculator(divide)(1,2,'DIVIDE')
 
+// HOC
+// const Post = withBuildComponent({url, id})(PostComponent)
+
 // 초급 방식
 function calcFn (a, b, operator) {
   if(operator === 'SUM') {
